# socks-with-udp-over-ssh

./: .gitmodules  Cargo.toml  README.md
server/: dns.rs  main.rs
